// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerContainer only with required props renders successfully only with required props: AnimatedView with invisible. 1`] = `null`;

exports[`PickerContainer only with required props renders successfully only with required props: AnimatedView with visible. 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {},
      }
    }
    collapsable={false}
    entering={
      SlideInDown {
        "build": [Function],
        "callbackV": [Function],
        "durationV": 300,
        "randomizeDelay": false,
      }
    }
    exiting={
      SlideOutDown {
        "build": [Function],
        "callbackV": [Function],
        "durationV": 300,
        "randomizeDelay": false,
      }
    }
    pointerEvents="box-none"
    style={Object {}}
    testID="containerAnimated"
  />
</View>
`;

exports[`PickerContainer with all props should be applied properly: PickerContainer with all props. 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {},
      }
    }
    collapsable={false}
    entering={
      ZoomIn {
        "build": [Function],
        "callbackV": [Function],
        "durationV": 500,
        "randomizeDelay": false,
      }
    }
    exiting={
      ZoomOut {
        "build": [Function],
        "callbackV": [Function],
        "durationV": 300,
        "randomizeDelay": false,
      }
    }
    pointerEvents="box-none"
    style={
      Object {
        "backgroundColor": "green",
      }
    }
    testID="animatedView"
  />
</View>
`;
